deploy/aws/ingress-network.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: bookstore
  name: ingress-bookstore
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  backend:
    serviceName: endpoint-gateway
    servicePort: 9099
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: endpoint-gateway
              servicePort: 9099
